--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.0.0",
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.14.0",
     "resend": "^6.6.0"
   }
 }
