--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.14.0",
-    "resend": "^6.6.0"
+    "nodemailer": "^6.9.15"
   }
 }
